Changed nav and footer colour

--- a/_pages/404.html
+++ b/_pages/404.html
@@ -4,5 +4,10 @@ title: "HumanEd - 404"
 permalink: /404
 ---
 
-<img src="assets/images/bg.jpg" style="height: auto; max-width: 100%; opacity: 0.6;">
-<!--<h1 style="font-size: 100px; text-align: center;">404</h1>-->
+<img src="assets/images/bg.jpg" class="img-fluid">
+<!-- <h1 style="font-size: 100px; text-align: center;">404</h1>
+<h1 style="font-size: 100px; text-align: center;">xxx</h1>
+<h1 style="font-size: 100px; text-align: center;">xxx</h1>
+<h1 style="font-size: 100px; text-align: center;">xxx</h1>
+<h1 style="font-size: 100px; text-align: center;">xxx</h1>
+<h1 style="font-size: 100px; text-align: center;">xxx</h1> -->
