--- a/_pages/team.html
+++ b/_pages/team.html
@@ -6,7 +6,19 @@ permalink: /team
 <h1>BLAHHHHH</h1>
 <br>
 
-<div class = "team-grid">
+<div class="row">
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+  </div>
+
+<!-- <div class = "team-grid">
 
 	{% for member in site.data.committee %}
 		
@@ -29,6 +41,8 @@ permalink: /team
 	{% endfor %}
 
 </div>
+
+-->
 
 
 
