--- a/_pages/404.html
+++ b/_pages/404.html
@@ -3,14 +3,17 @@ layout: default_layout
 title: "HumanEd - 404"
 permalink: /404
 ---
-<center>
-	<br><br>
-	<h1 style="font-size: 90px;">404</h1>
-	<h4>PAGE NOT FOUND</h4>
-	<br>
-	<h6>Sorry, we were unable to find the page you were looking for :(</h6>
-	<h6>Head back to our homepage or check the URL and try again</h6>
-	<br>
-	<a class="btn btn-primary" href="/humanEd/" role="button">BACK TO HOME</a>
-	<br><br>
-</center>
+
+<div class = "container">
+	<center>
+		<br><br>
+		<h1 style="font-size: 90px;">404</h1>
+		<h4>PAGE NOT FOUND</h4>
+		<br>
+		<h6>Sorry, we were unable to find the page you were looking for :(</h6>
+		<h6>Head back to our homepage or check the URL and try again</h6>
+		<br>
+		<a class="btn btn-primary" href="/humanEd/" role="button">BACK TO HOME</a>
+		<br><br>
+	</center>
+</div>
