Footer update color

--- a/_pages/team.html
+++ b/_pages/team.html
@@ -18,6 +18,8 @@ permalink: /team
     </div>
   </div>
 
+  <i class="fa fa-facebook"></i>
+
 <!-- <div class = "team-grid">
 
 	{% for member in site.data.committee %}
