Editing Teams page

--- a/_pages/team.html
+++ b/_pages/team.html
@@ -3,30 +3,17 @@ layout: default_layout
 title: "HumanEd - Team"
 permalink: /team
 ---
-<h1>BLAHHHHH</h1>
-<br>
 
-<div class="row">
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-  </div>
+<img class ="img-fluid" src="site_assets/images/team/team-intro.jpg">
 
-  <i class="fa fa-facebook"></i>
+<!--
+<div class = "team-grid">
 
-<!-- <div class = "team-grid">
-
-	{% for member in site.data.committee %}
+{% for member in site.data.committee %}
 		
 		<div class = "team-container">
 			<div class = "image-container">
-				<img src="assets/images/committee/{{ member.image }}">
+				<img src="site_assets/images/team/committee/{{ member.image }}">
 			</div>
 
 				<div class = "info">
@@ -40,13 +27,9 @@ permalink: /team
 				</div>
 		</div>
 
-	{% endfor %}
+{% endfor %}
 
-</div>
-
--->
-
-
+</div>div> -->
 
 <br>
 <h1>BLAHHHHH</h1>
