Editing Teams page

--- a/_pages/team.html
+++ b/_pages/team.html
@@ -4,9 +4,32 @@ title: "HumanEd - Team"
 permalink: /team
 ---
 
-<img class ="img-fluid" src="site_assets/images/team/team-intro.jpg">
+<div class = "team-head">
+<br><br>
+<h2>Meet the Team.</h2>
+<br>
+<p>An eager group of students focused on the long-term research, development and implementation of new technologies in the field of robotics. <br> If the field of robotics interests you as, just as much as it interests us feel free to join us!</p>
+<br>
+<a class="btn btn-primary" href="https://forms.office.com/r/K4tMfburpr" role="button" target="_blank">JOIN US</a>
 
-<!--
+</div>
+
+<nav class="navbar py-1 navbar-expand-lg navbar-light" style="background-color: white;">
+	  <div class="container-fluid">
+	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	      <span class="navbar-toggler-icon"></span>
+	    </button>
+
+	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	      <ul class="navbar-nav ms-auto mb-1 mb-lg-0">
+	      	<li class="nav-item center"> <a class="nav-link" id="transition" href="/humanEd/team">team</a> </li>
+	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#contact-us">contact us</a> </li>
+	      </ul>
+	    </div>
+
+	  </div>
+</nav>
+
 <div class = "team-grid">
 
 {% for member in site.data.committee %}
@@ -29,7 +52,4 @@ permalink: /team
 
 {% endfor %}
 
-</div>div> -->
-
-<br>
-<h1>BLAHHHHH</h1>
+</div>
