--- a/_pages/team.html
+++ b/_pages/team.html
@@ -4,14 +4,13 @@ title: "HumanEd - Team"
 permalink: /team
 ---
 
-<div class = "team-head">
-<br><br>
-<h2>Meet the Team.</h2>
-<br>
-<p>An eager group of students focused on the long-term research, development and implementation of new technologies in the field of robotics. <br> If the field of robotics interests you as, just as much as it interests us feel free to join us!</p>
-<br>
-<a class="btn btn-primary" href="https://forms.office.com/r/K4tMfburpr" role="button" target="_blank">JOIN US</a>
-
+<div class = "team-header">
+	<br><br>
+	<h2>Meet the Team.</h2>
+	<br>
+	<p>An eager group of students focused on the long-term research, development and implementation of new technologies in the field of robotics. 
+	<br> If the field of robotics interests you as, just as much as it interests us feel free to join us!</p><br>
+	<a class="btn btn-danger" href="https://forms.office.com/r/K4tMfburpr" role="button" target="_blank">JOIN US</a>
 </div>
 
 <nav class="navbar py-1 navbar-expand-lg navbar-light" style="background-color: white;">
@@ -30,13 +29,13 @@ permalink: /team
 	  </div>
 </nav>
 
-<div class = "team-grid">
+<!--<div class = "team-grid">
 
 {% for member in site.data.committee %}
 		
 		<div class = "team-container">
 			<div class = "image-container">
-				<img src="site_assets/images/team/committee/{{ member.image }}">
+				<img src="site_assets/images/committee/{{ member.image }}">
 			</div>
 
 				<div class = "info">
@@ -52,4 +51,4 @@ permalink: /team
 
 {% endfor %}
 
-</div>
+</div> -->
