--- a/_pages/team.html
+++ b/_pages/team.html
@@ -8,8 +8,8 @@ permalink: /team
 	<br><br>
 	<h2>Meet the Team.</h2>
 	<br>
-	<p>An eager group of students focused on the long-term research, development and implementation of new technologies in the field of robotics. 
-	<br> If the field of robotics interests you as, just as much as it interests us feel free to join us!</p><br>
+	<p>An eager group of students focused on the long-term research, development and implementation of new technologies in the field of robotics.</p>
+	<p>If the field of robotics interests you as, just as much as it interests us feel free to join us!</p><br>
 	<a class="btn btn-danger" href="https://forms.office.com/r/K4tMfburpr" role="button" target="_blank">JOIN US</a>
 </div>
 
