--- a/_pages/team.html
+++ b/_pages/team.html
@@ -8,21 +8,24 @@ permalink: /team
 	<br><br>
 	<h2>Meet the Team.</h2>
 	<br>
-	<p>An eager group of students focused on the long-term research, development and implementation of new technologies in the field of robotics.</p>
-	<p>If the field of robotics interests you as, just as much as it interests us feel free to join us!</p><br>
+	<p>An eager group of students focused on the long-term research, development and implementation of new technologies in the field of robotics.<br>
+	If the field of robotics interests you as, just as much as it interests us feel free to join us!</p><br>
 	<a class="btn btn-danger" href="https://forms.office.com/r/K4tMfburpr" role="button" target="_blank">JOIN US</a>
 </div>
 
-<nav class="navbar py-1 navbar-expand-lg navbar-light" style="background-color: white;">
+<nav class="navbar py-4 navbar-expand-lg navbar-dark" style="background-color: #175873;">
 	  <div class="container-fluid">
-	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTeam" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
 
-	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-	      <ul class="navbar-nav ms-auto mb-1 mb-lg-0">
-	      	<li class="nav-item center"> <a class="nav-link" id="transition" href="/humanEd/team">team</a> </li>
-	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#contact-us">contact us</a> </li>
+	    <div class="collapse navbar-collapse" id="navbarTeam">
+	      <ul class="navbar-nav navbar-center">
+	      	<li class="nav-item center"> <a class="nav-link" id="transition" href="#">Committee</a> </li>
+	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#">Biomimetic Hand</a> </li>
+	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#">Exoskeleton</a> </li>
+	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#">Sponsorship and Marketing</a> </li>
+	        <li class="nav-item center"> <a class="nav-link" id="transition" href="#">All</a> </li>
 	      </ul>
 	    </div>
 
@@ -30,9 +33,7 @@ permalink: /team
 </nav>
 
 <!--<div class = "team-grid">
-
 {% for member in site.data.committee %}
-		
 		<div class = "team-container">
 			<div class = "image-container">
 				<img src="site_assets/images/committee/{{ member.image }}">
@@ -48,7 +49,6 @@ permalink: /team
 		
 				</div>
 		</div>
-
 {% endfor %}
 
 </div> -->
