--- a/_pages/team.html
+++ b/_pages/team.html
@@ -13,20 +13,21 @@ permalink: /team
 	<a class="btn btn-danger" href="https://forms.office.com/r/K4tMfburpr" role="button" target="_blank">JOIN US</a>
 </div>
 
-<nav class="navbar py-4 navbar-expand-md navbar-dark sticky-top" style="background-color: #00221C; top: 86px;">
+<nav class="navbar py-6 navbar-expand-md navbar-dark sticky-top" style="background-color: #00221C; top: 86px;">
 	<div class="container-fluid">
+		<a class="navbar-brand" href="#"></a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupported" aria-controls="navbarSupported" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		</button>
 
 		<div class="collapse navbar-collapse" id="navbarSupported">
-		    <ul class="navbar-nav navbar-center">
-		    	<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#">Committee</a> </li>
+		    <ul class="navbar-nav mx-auto">
+				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#">Committee</a> </li>
 				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#">Biomimetic Hand</a> </li>
 				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#">Exoskeleton</a> </li>
 				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#">Sponsorship and Marketing</a> </li>
 				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#">All</a> </li>
-		    </ul>
+			</ul>
 		</div>
 	</div>
 </nav>
