--- a/_pages/team.html
+++ b/_pages/team.html
@@ -13,9 +13,8 @@ permalink: /team
 	<a class="btn btn-danger" href="https://forms.office.com/r/K4tMfburpr" role="button" target="_blank">JOIN US</a>
 </div>
 
-<nav class="navbar py-6 navbar-expand-md navbar-dark sticky-top" style="background-color: #00221C; top: 86px;">
+<nav class="navbar py-1 navbar-expand-md navbar-dark sticky-top" style="background-color: #00221C; top: 86px;">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"></a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupported" aria-controls="navbarSupported" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		</button>
@@ -32,25 +31,20 @@ permalink: /team
 	</div>
 </nav>
 
-<!--<nav class="navbar py-4 navbar-expand-md navbar-dark sticky-top" style="background-color: #00221C; top: 86px;">
-	<div class = "container-fluid">
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTeam" aria-controls="navbarTeam" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+<p>jfbkwekwefkkfjk</p>
+<p>jfbkwekwefkkfjk</p>
+<p>jfbkwekwefkkfjk</p>
+<p>jfbkwekwefkkfjk</p>
+<p>jfbkwekwefkkfjk</p>
+<p>jfbkwekwefkkfjk</p>
+<p>jfbkwekwefkkfjk</p>
+<p>jfbkwekwefkkfjk</p>
+<p>jfbkwekwefkkfjk</p>
+<p>jfbkwekwefkkfjk</p>
+<p>jfbkwekwefkkfjk</p>
+<p>jfbkwekwefkkfjk</p>
 
-		<div class="collapse navbar-collapse" id="navbarTeam">
-			<ul class="navbar-nav navbar-center">
-				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#">Committee</a> </li>
-				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#">Biomimetic Hand</a> </li>
-				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#">Exoskeleton</a> </li>
-				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#">Sponsorship and Marketing</a> </li>
-				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#">All</a> </li>
-			</ul>
-		</div>
-	</div>
-</nav>-->
-
-<div class = "team-grid">
+<!--<div class = "team-grid">
 	{% for member in site.data.committee %}
 		<div class="grid-item">		
 			<div class = "team-container">
@@ -68,23 +62,4 @@ permalink: /team
 		</div>
 		</div>
 	{% endfor %}
-</div>
-<!--
-{% for member in site.data.committee %}
-		<div class = "team-container">
-			<div class = "image-container">
-				<img src="site_assets/images/committee/{{ member.image }}">
-			</div>
-
-				<div class = "info">
-					
-					<h4>{{ member.name }}
-						<br><span class="position"> {{ member.position }} </span>
-						<br><span class="course"> {{ member.course }} </span>
-						<br><a href="{{ member.linkedin }}" class="fa fa-linkedin"></a>
-					</h4>
-				</div>
-		</div>
-{% endfor %}
--->
-</div>
+</div> -->
