--- a/_pages/team.html
+++ b/_pages/team.html
@@ -3,7 +3,6 @@ layout: default_layout
 title: "HumanEd - Team"
 permalink: /team
 ---
-
 <div class = "team-header">
 	<br><br>
 	<h2>Meet the Team.</h2>
@@ -31,18 +30,23 @@ permalink: /team
 	</div>
 </nav>
 
-<p>jfbkwekwefkkfjk</p>
-<p>jfbkwekwefkkfjk</p>
-<p>jfbkwekwefkkfjk</p>
-<p>jfbkwekwefkkfjk</p>
-<p>jfbkwekwefkkfjk</p>
-<p>jfbkwekwefkkfjk</p>
-<p>jfbkwekwefkkfjk</p>
-<p>jfbkwekwefkkfjk</p>
-<p>jfbkwekwefkkfjk</p>
-<p>jfbkwekwefkkfjk</p>
-<p>jfbkwekwefkkfjk</p>
-<p>jfbkwekwefkkfjk</p>
+<h2 style="padding-top: 30px; padding-left: 8%;">committee</h2>
+
+<div class="grid-container">
+  <div class="grid-item">1</div>
+  <div class="grid-item">2</div>
+  <div class="grid-item">3</div>  
+  <div class="grid-item">4</div>
+  <div class="grid-item">5</div>
+  <div class="grid-item">6</div>  
+  <div class="grid-item">7</div>
+  <div class="grid-item">8</div>
+  <div class="grid-item">9</div>  
+</div>
+
+<h2>biomimetic hand</h2>
+<h2>exoskeleton</h2>
+<h2>sponsorship and marketing</h2>
 
 <!--<div class = "team-grid">
 	{% for member in site.data.committee %}
