--- a/_pages/team.html
+++ b/_pages/team.html
@@ -30,7 +30,7 @@ permalink: /team
 	</div>
 </nav>
 
-<h2 id="committee" style="padding-top: 30px; padding-left: 8%;">committee</h2>
+<h2 id="committee" style="padding-top: 30px; padding-left: 9.5%;">committee</h2>
 
 <section class = "team">
 	<div class = "container">
@@ -38,10 +38,7 @@ permalink: /team
 			{% for member in site.data.committee %}
 				<div class = "col-md-3 profile text-center">
 					<div class = "img-box">
-						<img src="site_assets/images/committee/{{ member.image }}" class="img-responsive" width="230px">
-						<ul>
-							<li><a href="{{ member.linkedin }}" class= "fa fa-linkedin"></a></li>
-						</ul>
+						<a class="zoom-team" href = " {{ member.linkedin }}"><img src="site_assets/images/committee/{{ member.image }}" class=" img-responsive" width="240px"></a>
 					</div>
 					<h2>{{ member.name }}</h2>
 					<h3>{{ member.position }}</h3>
@@ -51,12 +48,31 @@ permalink: /team
 		</div>
 </section>
 
-<!--<div class = "team-grid">
+<h2 id="snm" style="padding-top: 30px; padding-left: 9.5%;">sponsorship & marketing</h2>
+
+<section class = "team">
+	<div class = "container">
+		<div class ="row">
+			{% for member in site.data.sponsorship_marketing %}
+				<div class = "col-md-3 profile text-center">
+					<div class = "img-box">
+						<a class="zoom-team" href = " {{ member.linkedin }}"><img src="site_assets/images/sponsorship_marketing/{{ member.image }}" class=" img-responsive" width="240px"></a>
+					</div>
+					<h2>{{ member.name }}</h2>
+					<h3>{{ member.position }}</h3>
+					<p> {{ member.year }} , {{ member.course }}</p>
+				</div>
+			{% endfor %}
+		</div>
+</section>
+<!--
+<div class = "team-grid">
 	{% for member in site.data.committee %}
 		<div class="grid-item">		
 			<div class = "team-container">
-			<div class = "image-container">
-				<img src="site_assets/images/committee/{{ member.image }}">
+				<div class = "image-container">
+					<img src="site_assets/images/committee/{{ member.image }}">
+				</div>
 			</div>
 
 			<div class = "info">
@@ -69,4 +85,4 @@ permalink: /team
 		</div>
 		</div>
 	{% endfor %}
-</div> -->
+</div>-->
