--- a/_pages/team.html
+++ b/_pages/team.html
@@ -10,6 +10,26 @@ permalink: /team
 	<p>An eager group of students focused on the long-term research, development and implementation of new technologies in the field of robotics.<br>
 	If the field of robotics interests you as, just as much as it interests us feel free to join us!</p><br>
 	<a class="btn btn-danger" href="https://forms.office.com/r/K4tMfburpr" role="button" target="_blank">JOIN US</a>
+
+	<br><br>
+
+	<p>Sign up to receive exclusive information on our projects, events, and other exciting news before anyone else!</p>
+
+	<form action="https://getform.io/f/af03dc9a-452f-4a87-a13b-18c84655807c" class = "form-inline" method="POST">
+		<div class = "row justify-content-center">
+			<div class = "form-group col-auto">
+				<label for="InputName">Name</label>
+		    	<input type="name" class="form-control" id="InputName" placeholder="Enter name">
+			</div>
+
+			<div class = "form-group col-auto">
+				<label for="InputEmail">Email address</label>
+		    	<input type="email" class="form-control" id="InputEmail" placeholder="Enter email">
+		    	<small id="emailHelp" class="form-text" style="color:white;">We'll never share your details with anyone else.</small>
+			</div>
+		</div>
+    	<button type="submit" class="btn btn-danger">SUBSCRIBE</button>
+	</form>
 </div>
 
 <nav class="navbar py-1 navbar-expand-md navbar-dark sticky-top" style="background-color: #00221C; top: 86px;">
@@ -56,7 +76,7 @@ permalink: /team
 			{% for member in site.data.sponsorship_marketing %}
 				<div class = "col-md-3 profile text-center">
 					<div class = "img-box">
-						<a class="zoom-team" href = " {{ member.linkedin }}"><img src="site_assets/images/sponsorship_marketing/{{ member.image }}" class=" img-responsive" width="240px"></a>
+						<a class="zoom-team" href = " {{ member.linkedin }}"><img src="site_assets/images/sponsorship_marketing/{{ member.image }}" class=" img-responsive" width="240px" style="height: auto;"></a>
 					</div>
 					<h2>{{ member.name }}</h2>
 					<h3>{{ member.position }}</h3>
