--- a/_pages/team.html
+++ b/_pages/team.html
@@ -13,7 +13,7 @@ permalink: /team
 
 	<br><br>
 
-	<p>Sign up to receive exclusive information on our projects, events, and other exciting news before anyone else!</p>
+	<p>Sign up to receive exclusive information on our projects, events, and other exciting news before anyone else! No spam, we promise :)</p>
 
 	<form action="https://getform.io/f/af03dc9a-452f-4a87-a13b-18c84655807c" class = "form-inline" method="POST">
 		<div class = "row justify-content-center">
@@ -21,14 +21,18 @@ permalink: /team
 				<label for="InputName">Name</label>
 		    	<input type="name" class="form-control" id="InputName" placeholder="Enter name">
 			</div>
-
+			
 			<div class = "form-group col-auto">
 				<label for="InputEmail">Email address</label>
 		    	<input type="email" class="form-control" id="InputEmail" placeholder="Enter email">
-		    	<small id="emailHelp" class="form-text" style="color:white;">We'll never share your details with anyone else.</small>
+		    	
 			</div>
 		</div>
-    	<button type="submit" class="btn btn-danger">SUBSCRIBE</button>
+		<br>
+		<small class="form-text" style="color:#FFFFFD;">We'll never share your details with anyone else.</small><br>
+  		<input type="checkbox" class="form-check-input" id="exampleCheck1">
+  		<label class="form-text" for="defaultCheck1" style="color:#FFFFFD;">I agree to HumanEd contacting me, and give them permission to store and process my data.</label>
+    	<br><button type="submit" class="btn btn-danger" style="margin-top: 10px;">SUBSCRIBE</button>
 	</form>
 </div>
 
