--- a/_pages/team.html
+++ b/_pages/team.html
@@ -19,18 +19,18 @@ permalink: /team
 		<div class = "row justify-content-center">
 			<div class = "form-group col-auto">
 				<label for="InputName">Name</label>
-		    	<input type="name" class="form-control" id="InputName" placeholder="Enter name" required="true">
+		    	<input type="name" name = "name" class="form-control" id="InputName" placeholder="Enter name" required="true">
 			</div>
 			
 			<div class = "form-group col-auto">
 				<label for="InputEmail">Email address</label>
-		    	<input type="email" class="form-control" id="InputEmail" placeholder="Enter email" required="true">
+		    	<input type="email" name = "email" class="form-control" id="InputEmail" placeholder="Enter email" required="true">
 		    	
 			</div>
 		</div>
 		<br>
 		<small class="form-text" style="color:#FFFFFD;">We'll never share your details with anyone else.</small><br>
-  		<input type="checkbox" class="form-check-input" id="exampleCheck1" required="true">
+  		<input type="checkbox" name = "t&c" class="form-check-input" id="exampleCheck1" required="true">
   		<label class="form-text" for="defaultCheck1" style="color:#FFFFFD;">I agree to HumanEd contacting me, and give them permission to store and process my data.</label>
     	<br><button type="submit" class="btn btn-danger" style="margin-top: 10px;">SUBSCRIBE</button>
 	</form>
