--- a/_pages/team.html
+++ b/_pages/team.html
@@ -3,6 +3,7 @@ layout: default_layout
 title: "HumanEd - Team"
 permalink: /team
 ---
+
 <div class = "team-header">
 	<br><br>
 	<h2>Meet the Team.</h2>
@@ -94,6 +95,10 @@ permalink: /team
 		</div>
 </section>
 </div>
+
+<button id="xyz" onclick="externalFunction()">Hi</button>
+
+
 <!--
 <div class = "team-grid">
 	{% for member in site.data.committee %}
