Fixed anchor issue

--- a/_pages/team.html
+++ b/_pages/team.html
@@ -19,17 +19,19 @@ permalink: /team
 
 		<div class="collapse navbar-collapse" id="navbarSupported">
 		    <ul class="navbar-nav mx-auto">
-				<li class="nav-item center"> <a class="nav-link comm" id="team-transition" onClick="document.getElementById('comm').scrollTo(700);" href="#committee">Committee</a> </li>
+				<li class="nav-item center"> <a class="nav-link comm" id="team-transition" href="#committee">Committee</a> </li>
 				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#biomimetic">Biomimetic Hand</a> </li>
 				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#exoskeleton">Exoskeleton</a> </li>
-				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#snm">Sponsorship and Marketing</a> </li>
+				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#committee">Sponsorship and Marketing</a> </li>
 				<li class="nav-item center"> <a class="nav-link" id="team-transition" href="#committee">All</a> </li>
 			</ul>
 		</div>
 	</div>
 </nav>
 
-<div id="committee"><h2 style="padding-top: 30px; padding-left: 9.5%;">committee</h2></div>
+<div id="committee" style="position:absolute; top:310px;">
+</div>
+	<h2 style="padding-top: 30px; padding-left: 9.5%;">committee</h2>
 	<br>
 	<section class = "team">
 		<div class = "container">
