--- a/_pages/team.html
+++ b/_pages/team.html
@@ -29,7 +29,7 @@ permalink: /team
 	</div>
 </nav>
 
-<div id="committee" style="position:absolute; top:310px;">
+<div id="committee">
 </div>
 	<h2 style="padding-top: 30px; padding-left: 9.5%;">committee</h2>
 	<br>
