--- a/_pages/join_us.html
+++ b/_pages/join_us.html
@@ -29,6 +29,9 @@ permalink: /join-us
 	</form>
 </div>
 
+<div style="background-image: url(site_assets/images/blah.jpg) height: 200px; width: 100%;">
+</div>
+
 
 	
 
