--- a/_pages/join_us.html
+++ b/_pages/join_us.html
@@ -4,42 +4,35 @@ title: "HumanEd - Join us"
 permalink: /join-us
 ---
 
-<div class="container-fluid join_us-header">
-	<h1 style="padding-top: 50px;">Interested in joining us?</h1>
-	<p style="padding-top: 25px;">If you are passionate about the field of robotics, and want to be a part of something big.</p>
-	<p> See what we can offer.</p>
-	<button type="submit" class="btn btn-danger" style="margin-top: 10px;">Join our Team &#129046;</button>
-	<br><br>
-	<p>To receive exclusive information on our projects, events, and other exciting news sign up for our newsletter!</p>
+<div style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)),
+url(
+'site_assets/images/blah.jpg'); 
+  background-size: cover; height:550px; color:white; text-align: center;">
+
+  <h1 style="padding-top: 70px; font-size: 40px;">Interested in joining us?</h1>
+  <p style="padding-top: 25px; font-size: 18px; margin: 5px;">If you are passionate about the field of robotics, and want to be a part of something big.</p>
+  <p style="font-size: 18px;"> See what we can offer!</p>
+  
+  <button type="submit" class="btn btn-danger" style="margin-top: 10px;">Join our Team &#129046;</button>
+	<p style="font-size: 18px; padding-top: 20px;">To receive exclusive information on our projects, events, and other exciting news sign up for our newsletter!</p>
 
 	<form action="https://getform.io/f/af03dc9a-452f-4a87-a13b-18c84655807c" class = "form-inline" method="POST">
 		<div class = "row justify-content-center">
 			<div class = "form-group col-auto">
 		    	<input type="name" name = "name" class="form-control" id="InputName" placeholder="Enter name" required="true">
 			</div>
-			
 			<div class = "form-group col-auto">
 		    	<input type="email" name = "email" class="form-control" id="InputEmail" placeholder="Enter email" required="true">
 			</div>
-			<small style="font-size: 12px;" class="form-text text-muted">We'll never share your details with anyone else.</small>
+
+			<small style="font-size: 12px; color: white" class="form-text">We'll never share your details with anyone else.</small>
 		</div>
+		
   		<input type="checkbox" name = "t&c" class="form-check-input" id="exampleCheck1" required="true">
-  		<label style="font-size: 15px; color: white;" class="form-text" for="defaultCheck1" style="color:#FFFFFD;">I agree to HumanEd processing and storing my data.</label>
-    	<br><button type="submit" class="btn btn-danger" style="margin-top: 10px;">SUBSCRIBE</button>
+  		<label style="font-size: 15px; color: white;" class="form-text" for="defaultCheck1">I agree to HumanEd processing and storing my data.</label>
+    	<br><button type="submit" class="btn btn-danger" style="margin-top: 25px;">Subscribe</button>
 	</form>
 </div>
-
-<div style="background-image: url(site_assets/images/blah.jpg) height: 200px; width: 100%;">
-</div>
-
-
-	
-
-
-</div>
-<p>FAQs</p>
-
-<!----<img class="img-responsive w-100" src="site_assets/images/blah.jpg" style="object-fit: cover; filter: blur(4px); opacity: 0.3;">-->
 
 
 
