--- a/_pages/join_us.html
+++ b/_pages/join_us.html
@@ -10,8 +10,8 @@ url(
   background-size: cover; height:550px; color:white; text-align: center;">
 
   <h1 style="padding-top: 70px; font-size: 40px;">Interested in joining us?</h1>
-  <p style="padding-top: 25px; font-size: 18px; margin: 5px;">If you are passionate about the field of robotics, and want to be a part of something big.</p>
-  <p style="font-size: 18px;"> See what we can offer!</p>
+  <p style="padding-top: 25px; font-size: 18px; margin: 5px;">If you're interested robotics, mechanics and or programming in general, don't hesitate to join us and get a chance to be a prt of something big! </p>
+  <!--<p style="font-size: 18px;"> See what we can offer!</p>-->
   
   <button type="submit" class="btn btn-danger" style="margin-top: 10px;">Join our Team &#129046;</button>
 	<p style="font-size: 18px; padding-top: 20px;">To receive exclusive information on our projects, events, and other exciting news sign up for our newsletter!</p>
